samples/_failures_safe/1761710726_cb5b16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77a6f5d0.c: In function ‘main’:
./samples/SAFE/__tmp_77a6f5d0.c:136:5: error: expected ‘,’ or ‘;’ at end of input
  136 |     int len = strlen
      |     ^~~
./samples/SAFE/__tmp_77a6f5d0.c:136:5: error: expected declaration or statement at end of input
